--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,8 @@ langchain
 flask
 pypdf
 python-dotenv
-pinecone[grpc]
+pinecone-client  # replace pinecone[grpc]
 langchain-pinecone
 langchain_community
 langchain_openai
 langchain_experimental
--e .
